--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = "0.27.0"
+egui = "0.27.0"
+env_logger = "0.11.3"
+epi = "0.17.0"
+log = "0.4.21"
