--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ env_logger = "0.11.3"
 epi = "0.17.0"
 log = "0.4.21"
 opener = "0.7.0"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.116"
 strip-ansi-escapes = "0.2.0"
